--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "body-parser": "^1.18.1",
     "express": "^4.15.4",
+    "express-spa": "0.0.2",
     "mongojs": "^2.4.1"
   }
 }
